cabal-version:       3.0
name:                hsdht
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/hsdht#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:


common exe-ghc-opts
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  
library
  hs-source-dirs:      src
  exposed-modules:       HsDHT.Node
                       , HsDHT.RoutingTable.Internal
                       , HsDHT.RoutingTable
                       , HsDHT.Bencode
                       , HsDHT.DHTSocket
                       , HsDHT.DHTContext
                       , HsDHT.DHTMessage
                       , HsDHT.Util
  default-extensions:  OverloadedStrings
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                       , bytestring ^>= 0.11.0.0
                       , random ^>= 1.2.0
                       , parsec ^>= 3.1.14
                       , containers ^>= 0.6.4.1
                       , network ^>= 3.1.2
                       , transformers ^>= 0.5.6.2
                       , base16-bytestring ^>= 1.0.0.0
  default-language:    Haskell2010

executable hsdht-exe
  import:              exe-ghc-opts
  hs-source-dirs:      src/main
  main-is:             Main.hs
  build-depends:       base
                     , hsdht
                     , random ^>= 1.2.0
                     , bytestring ^>= 0.11.0.0
                     , network ^>= 3.1.2
                     , transformers ^>= 0.5.6.2
  default-extensions:  OverloadedStrings                     
  default-language:    Haskell2010

test-suite hsdht-test
  import:              exe-ghc-opts           
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       HsDHT.BencodeSpec
  build-depends:       base
                     , hsdht
                     , bytestring ^>= 0.11.0.0
                     , hedgehog ^>= 1.0.4
                     , hspec ^>= 2.7.4
                     , hspec-hedgehog ^>= 0.0.1.2
                     , parsec ^>= 3.1.14
                     , containers ^>= 0.6.4.1
  default-extensions:  OverloadedStrings

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hsdht
